--- a/parabens.html
+++ b/parabens.html
@@ -11,7 +11,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <!-- Twitter Cards -->
         <meta name="twitter:title" content="Me Namora?! " />
-        <meta name="twitter:description" content=" 'Eu te amo Princesa. &#10084'                                         Feliz 20 anos, você merece o mundo          " />
+        <meta name="twitter:description" content=" 'Eu te amo Princesa.'                                         Feliz 20 anos, você merece o mundo          " />
         <meta name="twitter:image" content="https://alexaquino.github.io/assets/css/images/facebook_imagem.png" />
         <meta name="twitter:card" content="summary_large_image" />
 
